--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <title>Ses Denemesi</title>
 </head>
 <body>
-  <audio autoplay>
-    <source src="rickroll.mp3" type="audio/mpeg">
+  <h1>sa</h1>
+  <button onclick="document.getElementById('audio').play()">Sesi Başlat</button>
+  <audio id="audio" controls>
+    <source src="rickroll.mp3">
     Tarayıcınız audio etiketini desteklemiyor.
   </audio>
-
-  <video src="rickroll.mp4"></video>
 </body>
 </html>
