--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 <body>
 
-  <button id="playButton">Sesi Başlat</button>
+  <button id="playButton">Günün Kelimesi</button>
 
   <audio id="rickAudio" preload="auto" style="display:none;">
     <source src="rickroll.mp3" type="audio/mpeg">
